--- a/全选全不选反选/index.html
+++ b/全选全不选反选/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title></title>
+		<title>index</title>
 		<link rel="stylesheet" type="text/css" href="css/checked.css"/>
 		<script src="js/checked.js" type="text/javascript" charset="utf-8"></script>
 	</head>
