--- a/切换图片/index.html
+++ b/切换图片/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>图片切换</title>
+		<title>index</title>
 		<link rel="stylesheet" type="text/css" href="css/photoSwitch.css"/>
 		<script src="js/phoneSwitch.js" type="text/javascript" charset="utf-8"></script>
 	</head>
