--- a/操作列表项/index.html
+++ b/操作列表项/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/operate.css">
   <script src="js/operate.js" type="text/javascript" charset="utf-8"></script>
-  <title>Document</title>
+  <title>index</title>
 </head>
 
 <body>
