--- a/模拟用户须知/index.html
+++ b/模拟用户须知/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="js/user.js"></script>
   <link rel="stylesheet" href="css/user.css">
-  <title>Document</title>
+  <title>index</title>
 </head>
 
 <body>
