--- a/赛车/index.html
+++ b/赛车/index.html
@@ -11,8 +11,15 @@
 </head>
 
 <body>
-  <div id="bg">
-    <div id="mybox"></div>
+  <div id="background">
+    <div id="bg">
+      <div id="mybox"></div>
+    </div>
+    <div id="band">
+      <p id="score">Score: 0</p>
+      <hr>
+      <p id="timeLast">Time: 0s</p>
+    </div>
   </div>
 </body>
 
