--- a/赛车/index.html
+++ b/赛车/index.html
@@ -13,6 +13,7 @@
 <body>
   <div id="background">
     <div id="bg">
+      <img src="img/bgImg.png" alt="" id="bgImg">
       <div id="mybox"></div>
     </div>
     <div id="band">
